Slurm_Results/slurm-414549.out
JobId=414549 JobName=name
   UserId=wzz745(4834) GroupId=wichmann(4014) MCS_label=N/A
   Priority=84286 Nice=0 Account=wichmann QOS=normal
   JobState=RUNNING Reason=None Dependency=(null)
   Requeue=1 Restarts=0 BatchFlag=1 Reboot=0 ExitCode=0:0
   RunTime=00:00:01 TimeLimit=06:00:00 TimeMin=N/A
   SubmitTime=2024-06-11T23:43:24 EligibleTime=2024-06-11T23:43:24
   AccrueTime=2024-06-11T23:43:25
   StartTime=2024-06-11T23:43:25 EndTime=2024-06-12T05:43:25 Deadline=N/A
   PreemptEligibleTime=2024-06-11T23:44:25 PreemptTime=None
   SuspendTime=None SecsPreSuspend=0 LastSchedEval=2024-06-11T23:43:25 Scheduler=Main
   Partition=2080-galvani AllocNode:Sid=galvani-slurmctl:2801826
   ReqNodeList=(null) ExcNodeList=(null)
   NodeList=galvani-cn115
   BatchHost=galvani-cn115
   NumNodes=1 NumCPUs=8 NumTasks=1 CPUs/Task=8 ReqB:S:C:T=0:0:*:*
   ReqTRES=cpu=8,mem=40G,node=1,billing=2,gres/gpu=1
   AllocTRES=cpu=8,mem=40G,node=1,billing=2,gres/gpu=1,gres/gpu:rtx2080ti=1
   Socks/Node=* NtasksPerN:B:S:C=0:0:*:* CoreSpec=*
   MinCPUsNode=8 MinMemoryNode=40G MinTmpDiskNode=0
   Features=(null) DelayBoot=00:00:00
   OverSubscribe=OK Contiguous=0 Licenses=(null) Network=(null)
   Command=/mnt/qb/home/wichmann/wzz745/Network-Pruning-and-Interpretability/ffcv.sh
   WorkDir=/mnt/qb/home/wichmann/wzz745/Network-Pruning-and-Interpretability
   StdErr=/mnt/qb/home/wichmann/wzz745/Network-Pruning-and-Interpretability/slurm-414549.out
   StdIn=/dev/null
   StdOut=/mnt/qb/home/wichmann/wzz745/Network-Pruning-and-Interpretability/slurm-414549.out
   Power=
   TresPerNode=gres:gpu:1
   

  File "/home/wichmann/wzz745/Network-Pruning-and-Interpretability/retraining_ffcv.py", line 192
    print(f"Avg Pruning Rate: {
          ^
SyntaxError: unterminated string literal (detected at line 192)
srun: error: galvani-cn115: task 0: Exited with exit code 1
srun: Terminating StepId=414549.0
